Part Crud project authentication
